Updated head with OG tags

--- a/home-service-full-stack/frontend/index.html
+++ b/home-service-full-stack/frontend/index.html
@@ -8,6 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Home Service App – fast, reliable booking for cleaning, repair, and more. Schedule trusted professionals online." />
+  <meta property="og:title" content="Home Service App">
+  <meta property="og:description"
+    content="Fast, reliable booking for cleaning, repair, and home services. Trusted professionals on demand.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="/vite.svg">
+  <meta property="og:url" content="https://home-services-f898b008a33e.herokuapp.com/en">
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
